syntax = "proto3";
option go_package = "github.com/PhuPhuoc/grpc_micro_test-authen";
package authen;

service AuthService {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    UserInfo user = 2;
}

message UserInfo {
    string id = 1;
    string email = 2;
    string name = 3;
}
