syntax = "proto3";
option go_package = "github.com/PhuPhuoc/grpc_micro_test-user";
package user;

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterResponse {
    string id = 1;
    string message = 2;
}